[package]
name = "tests"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
publish = false

[dependencies]
bytes = "0.4.7"
futures = "0.1.21"
h2 = "0.1.11"
h2-support = { git = "https://github.com/carllerche/h2" }
http = "0.1.5"
tokio = "0.1.8"
tokio-current-thread = "0.1.1"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tower-h2 = { path = ".." }
tower-service = { git = "https://github.com/tower-rs/tower", branch = "eliza/generic-service" }
tower-util = { git = "https://github.com/tower-rs/tower", branch = "eliza/generic-service"  }
