[package]
name = "tower-h2-balance"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]

[dependencies]
futures = "0.1"
http = "0.1"
h2 = "0.1"

tower-h2  = { version = "0.1", path = ".." }

tower-balance = { git = "https://github.com/tower-rs/tower" }
tower-service = { git = "https://github.com/tower-rs/tower" }
