[package]
name = "tower-h2-balance"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]

[dependencies]
futures = "0.1"
http = "0.1"

tokio-buf = "0.1"
tower-http = { git = "https://github.com/tower-rs/tower-http" }

tower-balance = { git = "https://github.com/tower-rs/tower" }
tower-service = "0.2"
